--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx @cloudflare/next-on-pages@1",
+    "build": "next build && npx @cloudflare/next-on-pages@1 --skip-build",
     "start": "wrangler pages dev .vercel/output/static --compatibility-flags=nodejs_compat",
     "lint": "next lint"
   },
@@ -32,4 +32,3 @@
     "wrangler": "^3.114.14"
   }
 }
-
