--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,3 @@
 name = "bird-rescue-app"
-pages_build_output_dir = ".vercel/output"
+pages_build_output_dir = ".vercel/output/static"
 compatibility_flags = ["nodejs_compat"]
