--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
-﻿{
+{
   "name": "bird-rescue-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx @cloudflare/next-on-pages@1",
+    "build": "vercel build --yes && next-on-pages --skip-build",
     "start": "wrangler pages dev .vercel/output/static --compatibility-flags=nodejs_compat",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
     "@stripe/stripe-js": "^7.9.0",
@@ -19,7 +19,6 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -29,7 +28,9 @@
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "wrangler": "^3.114.14"
+    "vercel": "47.0.4",
+    "@cloudflare/next-on-pages": "1.13.16",
+    "wrangler": "^3.0.0"
   }
 }
 
